# legal-contract-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.jsx
legal_agent/: __init__.py  cli.py  config.py  disclaimer.py
legal_agent/agents/: __init__.py  _base.py  analysis.py  intake.py  obligations.py  playbook.py  redline.py
legal_agent/api/: app.py  middleware.py
legal_agent/api/routes/: contracts.py  hitl.py
legal_agent/classify/: __init__.py  type_classifier.py
legal_agent/extract/: term_extractor.py
legal_agent/graph/: __init__.py  hitl.py  router.py  state.py  supervisor.py
legal_agent/models/: __init__.py
legal_agent/obligations/: __init__.py  calendar_writer.py  extractor.py
legal_agent/parse/: __init__.py  docx_parser.py  pdf_parser.py
legal_agent/playbook/: __init__.py  loader.py  matcher.py
legal_agent/redline/: __init__.py  docx_writer.py
legal_agent/safety/: __init__.py  audit.py  disclaimers.py  guardrails.py  pii_redaction.py
tests/: generate_fixtures.py  test_cli.py  test_disclaimer.py  test_intake_agent.py  test_pipeline.py  test_playbook_agent.py
