[project]
name = "legal-contract-agent"
version = "0.1.0"
description = "Production-grade autonomous agent for contract review, redlining, negotiation, and obligation tracking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Legal Contract Agent Contributors"}
]
keywords = ["legal", "contracts", "ai", "langgraph", "redline", "llm", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    # Core orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    # LLM providers
    "anthropic>=0.40",
    "openai>=1.50",
    # Schema-constrained extraction
    "instructor>=1.6",
    # Document parsing
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "mammoth>=1.8",
    "lxml>=5.3",
    "paddleocr>=2.8",
    "paddlepaddle>=2.6",
    "pdfplumber>=0.11",
    # API & web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Data validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    # Cache & queues
    "redis>=5.0",
    "arq>=0.26",
    # Calendar
    "icalendar>=6.0",
    "google-api-python-client>=2.150",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    # Telemetry
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21",
    # CLI
    "typer>=0.15",
    "rich>=13.9",
    # Utilities
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    "hashlib-blake2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "testcontainers[postgres,redis]>=4.8",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "coverage>=7.6",
]
lint = [
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
    "types-python-dateutil",
    "types-redis",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
legal-agent = "legal_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["legal_agent", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["legal_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pymupdf.*",
    "paddleocr.*",
    "paddlepaddle.*",
    "mammoth.*",
    "arq.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["legal_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
